--- a/styles/style.css
+++ b/styles/style.css
@@ -22,8 +22,12 @@ body {
   color: var(--text-color);
 }
 
+/* ===============================
+                HEADER
+================================== */
+
 header {
-  padding: 0 8% 0;
+  padding: 15px 8% 15px;
   width: 100%;
   height: auto;
   display: flex;
@@ -32,7 +36,6 @@ header {
   background-color: #fff;
   box-shadow: 0 1px 10px -5px black;
   position: fixed;
-  height: 80px;
   z-index: 1000;
   flex-wrap: wrap;
 }
@@ -51,85 +54,58 @@ header {
   margin-right: 2px;
 }
 
-.nav {
-  display: contents;
-  height: 100%;
-}
 .nav .ul {
   display: flex;
   flex-wrap: nowrap;
-  /* gap: 2rem; */
+  gap: 2rem;
   list-style: none;
   height: 100%;
   /* border: solid; */
 }
 
-.nav .ul li {
-  /* border: solid; */
-  padding: 0 20px;
-}
-
-.nav .ul .nav-a {
-  color: var(--text-color);
+.nav .ul li a {
   text-decoration: none;
+  color: #000;
+  font-weight: 500;
   font-size: 17px;
-  font-weight: 600;
-  display: block;
-  line-height: 80px;
-  cursor: pointer;
-}
-
-.nav .ul li:hover {
-  background-color: var(--main-color);
-}
-
-.nav .ul li:hover i {
-  transform: rotate(-180deg);
-  transition: ease 0.5s;
-}
-
-.nav .ul li:hover .active {
-  color: #fff;
-}
-
-.dropdown {
+  padding: 3px;
   position: relative;
 }
 
-.dropdown .ul-about {
-  position: absolute;
-  top: 79px;
-  left: 0;
-  display: flex;
-  flex-direction: column;
-  background-color: #fff;
-  list-style: none;
-  z-index: 999;
-  box-shadow: 1px 1px 10px -3px black;
-  width: max-content;
-  display: none;
+.nav .ul li a:hover {
+  color: var(--main-color);
 }
 
-.dropdown .ul-about li {
-  border: solid;
-  display: contents;
-}
-.dropdown .ul-about li a {
-  color: var(--text-color);
-  text-decoration: none;
-  font-size: 17px;
-  padding: 20px;
-  font-weight: 600;
-}
-.dropdown .ul-about li a:hover {
-  color: var(--home-text-color);
+.nav .ul li a::after {
   background-color: var(--main-color);
+  content: "";
+  left: 0;
+  bottom: -2px;
+  width: 0;
+  height: 2px;
+  position: absolute;
 }
 
-.dropdown:hover .ul-about {
-  display: flex;
+.nav .ul li a:hover::after {
+  width: 100%;
 }
 
+.nav .ul li a.active {
+  position: relative;
+  color: #00b3ff;
+}
+
+.nav .ul li a.active::before {
+  background-color: var(--main-color);
+  content: "";
+  left: 0;
+  bottom: -2px;
+  width: 100%;
+  height: 2px;
+  position: absolute;
+}
+
+/* menu */
 header .menu {
   padding: 1px;
   border-radius: 3px;
@@ -151,19 +127,9 @@ header .menu i {
   font-size: 32px;
 }
 
-/* .show-menu {
-  width: 100%;
-  border: solid black;
-}
-
-.show-menu ul {
-  flex-direction: column;
-  bottom: 0;
-  border: solid black;
-  z-index: 1000;
-} */
-
-/* HOME */
+/* ===============================
+                HOME
+================================== */
 
 .container-cover {
   display: flex;
@@ -272,7 +238,9 @@ header .menu i {
   width: 100%;
 }
 
-/* RESOURCES */
+/* ===============================
+                RESOURCES
+================================== */
 
 .my-ebooks {
   padding: 40px 6% 60px;
@@ -420,33 +388,44 @@ header .menu i {
   margin: auto;
 }
 
-/* PROFILE */
-
+/* ===============================
+                PROFILE
+================================== */
+.profile-container {
+  width: 100%;
+}
 .profile-card {
   max-width: 400px;
   height: 330px;
   box-shadow: 0px 0px 10px -5px;
   margin: 20px auto;
-  border-radius: 30px;
-}
-
-.profile-card {
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-  grid-template-rows: repeat(2, 100%);
+  grid-template-rows: 25% 75%;
+  border-radius: 20px 20px 0 0;
 }
 
 .header-card {
   background-color: #00b3ff;
-  width: 100%;
-  height: 25%;
   position: relative;
   display: flex;
   place-content: center;
 }
 
+.header-card .img {
+  width: 80px;
+  height: 80px;
+  position: absolute;
+  bottom: -30px;
+  background-color: #ccc;
+  border-radius: 50%;
+  background-image: url(/images/profil.png);
+  background-position: top;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
 .body-card {
-  height: 75%;
   color: #000;
   text-align: center;
   display: flex;
@@ -461,7 +440,7 @@ header .menu i {
 }
 
 .body-card h3 {
-  font-size: 18;
+  font-size: 18px;
   color: var(--main-color);
 }
 
@@ -502,19 +481,6 @@ header .menu i {
 .body-card .socials a:hover {
   color: var(--main-color);
   transition: all 0.5s;
-}
-
-.header-card .img {
-  width: 80px;
-  height: 80px;
-  position: absolute;
-  bottom: -30px;
-  background-color: #ccc;
-  border-radius: 50%;
-  background-image: url(/images/profil.png);
-  background-position: top;
-  background-size: cover;
-  background-repeat: no-repeat;
 }
 
 /* YOUTUBE VIDEOS */
@@ -718,10 +684,29 @@ h4 {
 
 @media (max-width: 820px) {
   header {
-    padding: 0 4%;
+    padding: 15px 4% 15px;
   }
   header .nav {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    border-top: 0.01mm solid #ccc;
+    padding: 30px 0;
+    margin-top: 15px;
     display: none;
+  }
+
+  header .nav.show-menu {
+    transition: 0.5s ease;
+    display: flex;
+  }
+
+  header .nav ul {
+    flex-direction: column;
+  }
+
+  header .nav ul li a {
+    text-align: initial;
   }
 
   header .menu {
@@ -753,7 +738,7 @@ h4 {
     padding: 7px;
   }
 
-  .profile-card {
+  .profile-container {
     padding: 0 4%;
   }
 }
@@ -763,7 +748,7 @@ h4 {
     grid-template-columns: repeat(2, minmax(250px, 350px));
   }
 
-  .profile-card {
+  .profile-container {
     padding: 0 3%;
   }
 }
