Last projects section

--- a/styles/style.css
+++ b/styles/style.css
@@ -674,7 +674,155 @@ h4 {
   opacity: 1;
 }
 
-/* FOOTER */
+/* ===============PROJECTS=============== */
+.projects {
+  padding: 20px 6% 30px;
+}
+
+.projects .heading {
+  display: flex;
+  gap: 5px;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.projects .heading i {
+  color: var(--main-color);
+  font-size: 24px;
+  font-weight: 700;
+}
+
+.projects .heading h3 {
+  font-size: 22px;
+  font-weight: 500;
+  font-style: italic;
+}
+
+.projects .tiles {
+  display: grid;
+  grid-template-columns: repeat(4, minmax(280px, 1fr));
+  grid-template-rows: repeat(1, auto);
+  grid-gap: 1rem;
+  overflow-y: scroll;
+  scrollbar-width: none;
+
+  min-height: auto;
+}
+.projects .tile {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  margin-bottom: 40px;
+  padding-bottom: 8px;
+  box-shadow: 0px 1px 1px -1px;
+}
+
+.projects .tile-4 {
+  box-shadow: none;
+  padding-bottom: 0;
+}
+
+/* .tile-img {
+  max-width: 200px;
+} */
+
+.tile-img img {
+  width: 100%;
+}
+
+.projects .tile-info {
+  display: grid;
+}
+
+.projects .tile h2 {
+  font-size: 22px;
+  font-weight: 600;
+  opacity: 0.9;
+}
+
+.projects .tile P {
+  font-size: 15px;
+  opacity: 0.8;
+}
+
+.projects .tile .tech {
+  margin: 5px 0 10px;
+}
+
+.projects .tile .tech span {
+  color: var(--main-color);
+  font-size: 10px;
+  font-style: italic;
+  opacity: 0.7;
+  font-weight: 700;
+  border: 1px solid var(--main-color);
+  width: max-content;
+  border-radius: 5px;
+  height: max-content;
+  padding: 2px 10px;
+  background-color: #d7f3ff;
+}
+
+.projects .tile-links {
+  display: flex;
+  gap: 10px;
+}
+
+.projects .tile-links a {
+  text-decoration: none;
+  color: var(--text-color);
+  border-bottom: solid 1px var(--main-color);
+  padding: 3px 7px;
+  border-radius: 5px;
+  font-size: 15px;
+  transition: all 0.5s;
+  font-weight: 600;
+}
+
+.projects .tile-links a:hover {
+  box-shadow: 1px 1px 5px -1px #00b3ff;
+  color: var(--main-color);
+}
+
+.projects .tile-links a i {
+  vertical-align: middle;
+  margin-left: 2px;
+  color: var(--main-color);
+  border-radius: 50%;
+  font-size: 18px;
+}
+
+.all-projects {
+  margin-top: -10px;
+}
+
+.all-projects a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 25px;
+  position: relative;
+  background: var(--main-color);
+  padding: 5px 10px;
+  border-radius: 5px;
+  font-weight: 600;
+}
+
+.all-projects a:hover {
+  background: #30c1ff;
+}
+
+.all-projects a i {
+  vertical-align: middle;
+  transition: all 0.5s;
+  margin-left: 2px;
+  color: var(--home-text-color);
+}
+
+.all-projects a:hover i {
+  transform: translatex(3px);
+}
+
+/*================ FOOTER ==============*/
 
 .copyright {
   border-top: 0.1mm solid #ccc;
