--- a/about-me/css/about.css
+++ b/about-me/css/about.css
@@ -23,7 +23,7 @@ main {
 }
 
 .home {
-  max-width: 700px;
+  max-width: 800px;
   margin: 0 auto 0;
   /* border: solid; */
   padding-top: 100px;
@@ -137,32 +137,53 @@ main {
   font-size: 20px;
 }
 
+/* --------------- Soicial networks ---------------- */
+
+.social-networks {
+  margin-top: 10px;
+  display: flex;
+  gap: 15px;
+  text-align: center;
+}
+
+.social-networks a {
+  font-size: 25px;
+  text-decoration: none;
+  color: var(--main-color);
+  border: solid 1px;
+  border-radius: 5px;
+  padding: 3px;
+}
+
+.social-networks a:hover {
+  background-color: var(--main-color);
+  color: #fff;
+}
+
+/* -----------------MOBILE------------------- */
+
 /* --------------- TECHNOLOGY ---------------- */
 
-.technology {
-  max-width: 700px;
+.technologies {
+  max-width: 800px;
   margin: 40px auto 20px;
 }
 
-.heading {
-  display: flex;
-  align-items: center;
-  font-size: 20px;
-  gap: 5px;
-}
-
-.heading h3 {
-  font-size: 20px;
+.technologies h3 {
+  font-size: 22px;
   font-weight: 500;
   font-style: italic;
   margin-bottom: 10px;
 }
 
-.heading i {
+.technologies i {
   color: var(--main-color);
-  font-size: 30px;
+  font-size: 25px;
   vertical-align: middle;
+  margin-right: 3px;
 }
+
+/* skills */
 
 .skills-container {
   width: 100%;
@@ -193,28 +214,3 @@ main {
 .skills i {
   font-size: 80px;
 }
-
-/* --------------- Soicial networks ---------------- */
-
-.social-networks {
-  margin-top: 10px;
-  display: flex;
-  gap: 15px;
-  text-align: center;
-}
-
-.social-networks a {
-  font-size: 25px;
-  text-decoration: none;
-  color: var(--main-color);
-  border: solid 1px;
-  border-radius: 5px;
-  padding: 3px;
-}
-
-.social-networks a:hover {
-  background-color: var(--main-color);
-  color: #fff;
-}
-
-/* -----------------MOBILE------------------- */
