--- a/contact/style/contact.css
+++ b/contact/style/contact.css
@@ -1,4 +1,102 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+* * {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+:root {
+  --main-color: #00b3ff;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+}
 .container-contact {
-  padding: 100px 6% 0;
+  padding: 100px 3% 0;
   color: #000;
+  max-width: 900px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+.container-contact .img {
+  max-width: 500px;
+  align-self: flex-end;
+}
+.container-contact .img img {
+  width: 100%;
+}
+
+.info h1 {
+  font-size: 45px;
+  font-weight: 600;
+}
+
+.info p {
+  font-size: 19px;
+}
+
+.info .icons {
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+
+.info .icons a {
+  text-decoration: none;
+  color: black;
+  display: flex;
+  align-items: center;
+  max-width: max-content;
+}
+
+.info .icons a i {
+  color: var(--main-color);
+  font-size: 25px;
+}
+
+.info .icons .bx-copy {
+  font-size: 18px;
+  margin-left: 3px;
+  cursor: pointer;
+  color: var(--main-color);
+  transition: 0.5s ease;
+}
+
+.info .icons .bx-copy:hover {
+  font-size: 20px;
+}
+
+.info .icons .copied {
+  font-size: 18px;
+  color: #747474;
+  opacity: 0;
+  transition: ease 0.5s;
+}
+
+.info .icons a span {
+  font-size: 17px;
+  margin-left: 5px;
+}
+
+.info .icons a span.link {
+  color: rgb(30, 30, 255);
+}
+
+@media (max-width: 500px) {
+  .info .icons a span.link {
+    font-size: 15px;
+  }
+
+  .info h1 {
+    font-size: 40px;
+  }
+
+  .info p {
+    font-size: 17px;
+  }
 }
